# scope-sam3d

./: README.md  pyproject.toml
src/scope_sam3d/: __init__.py  model_loader.py  pipeline.py  plugin.py  schema.py
src/scope_sam3d/renderers/: __init__.py  depth.py  normals.py
