[project]
name = "scope-sam3d"
version = "0.1.0"
description = "Depth and normal maps from Meta's SAM 3D Objects geometry model"
requires-python = ">=3.12"
dependencies = [
    "sam3d-objects @ git+https://github.com/facebookresearch/sam-3d-objects.git",
    "gsplat",
    "kaolin",
]

[project.entry-points."scope"]
scope_sam3d = "scope_sam3d"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scope_sam3d"]
