[project]
name = "scope-sam3d"
version = "0.1.0"
description = "Depth and normal maps from Meta's SAM 3D Objects geometry model"
requires-python = ">=3.12"
dependencies = [
    # Fork with cleaned requirements.txt (removes unused peft==0.10.0
    # and ~50 other phantom deps that conflict with Scope).
    # See: https://github.com/hthillman/sam3d-objects/tree/clean-dependencies
    "sam3d-objects @ git+https://github.com/hthillman/sam3d-objects.git@clean-dependencies",
    "gsplat",
]

[project.entry-points."scope"]
scope_sam3d = "scope_sam3d.plugin"

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scope_sam3d"]
